Close modules and update icons

--- a/index.html
+++ b/index.html
@@ -109,25 +109,25 @@
         <div class="product-card-module-cr ">
             <a href="#products-list"><div id="product-card-info" class="product-card-module main-module module first link"><i class="c_icon c_catalog gray main_page_icon"></i>Все товары</div></a>
         </div>
-        <div class="product-card-module-cr  module-open">
+        <div class="product-card-module-cr  module-close">
             <div id="product-card-info" class="product-card-module main-module module"  onclick="moduletoggle(this);"><i class="c_icon c_lider gray main_page_icon"></i>Лидеры продаж</div>
-            <div class="product-card-info-content">
+            <div class="product-card-info-content" style="display: none;">
                 <ul data-role="listview" data-theme="b" data-2inset="true" id="main-listview-lead">
 
                 </ul>
             </div>
         </div>
-        <div class="product-card-module-cr  module-open" >
+        <div class="product-card-module-cr  module-close" >
             <div id="product-card-info" class="product-card-module main-module"  onclick="moduletoggle(this);"><i class="c_icon c_super gray main_page_icon"></i>Суперцена</div>
-            <div class="product-card-info-content">
+            <div class="product-card-info-content"  style="display: none;">
                 <ul data-role="listview" data-theme="b" data-2inset="true" id="main-listview-super">
 
                 </ul>
             </div>
         </div>
-        <div class="product-card-module-cr  module-open" >
+        <div class="product-card-module-cr  module-close" >
             <div id="product-card-info" class="product-card-module main-module"  onclick="moduletoggle(this);"><i class="c_icon c_new gray main_page_icon"></i>Новинки</div>
-            <div class="product-card-info-content">
+            <div class="product-card-info-content"  style="display: none;">
                 <ul data-role="listview" data-theme="b" data-2inset="true" id="main-listview-new">
 
                 </ul>
